# tinyvdiff-demo

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci-tests.yml
src/tinyvdiff_demo/: __init__.py  matplotlib.py
tests/: test_fpdf2.py  test_matplotlib.py
