[project]
name = "tinyvdiff-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nan Xiao", email = "me@nanx.me" }
]
dependencies = [
    "numpy>=2.1.3",
    "matplotlib>=3.9.3",
    "fpdf2>=2.8.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "tinyvdiff>=0.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tinyvdiff_demo"]
